<resources>
    <string name="app_name" translatable="false">Veil</string>
    <string name="title_drawer_section_main">General</string>
    <string name="title_drawer_section_more">More</string>
    <string name="app_widget_name">Switch</string>
    <string
        name="app_widget_description"
    >Toggle Veil from the home screen</string>
    <string name="app_widget_status_connected">Protected</string>
    <string name="app_widget_status_disconnected">Ready</string>
    <string name="app_widget_action_connect">Connect</string>
    <string name="app_widget_action_disconnect">Disconnect</string>
    <string name="app_widget_action_reload">Reconnect</string>
    <string name="app_tile_name">Switch</string>
    <string
        name="app_tile_first_use"
    >First use of this feature, please use the app to add server</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="migration_success">Data migration success!</string>
    <string name="action_stop_service">Stop service</string>
    <string name="migration_fail">Data migration failed!</string>
    <string name="pull_down_to_refresh">Please pull down to refresh!</string>
    <string name="notification_action_stop_v2ray">Stop</string>
    <string
        name="toast_permission_denied"
    >Unable to obtain the permission</string>
    <string
        name="toast_permission_denied_notification"
    >Unable to obtain the notification permission</string>
    <string name="notification_action_more">Click for more</string>
    <string name="toast_services_start">Start Services</string>
    <string name="toast_services_stop">Stop Services</string>
    <string name="toast_services_success">Start Services Success</string>
    <string name="toast_services_failure">Start Services Failure</string>
    <string name="title_server">Servers</string>
    <string name="menu_item_add_config">Add config</string>
    <string name="add_config_import_section">Import</string>
    <string name="add_config_create_section">Create manually</string>
    <string name="add_config_subtitle">Import a config or build one manually</string>
    <string name="add_config_policy_group_caption">Balance or fail over across servers</string>
    <string name="add_config_proxy_chain_caption">Route through multiple servers</string>
    <string name="add_config_protocol_section">Server protocol</string>
    <string name="add_config_qr">QR code</string>
    <string name="add_config_clipboard">Clipboard</string>
    <string name="add_config_file">File</string>
    <string name="add_config_policy_group">Policy group</string>
    <string name="add_config_proxy_chain">Proxy chain</string>
    <string name="add_config_vmess" translatable="false">VMess</string>
    <string name="add_config_vless" translatable="false">VLESS</string>
    <string name="add_config_shadowsocks" translatable="false">Shadowsocks</string>
    <string name="add_config_socks" translatable="false">SOCKS</string>
    <string name="add_config_http" translatable="false">HTTP</string>
    <string name="add_config_trojan" translatable="false">Trojan</string>
    <string name="add_config_wireguard" translatable="false">WireGuard</string>
    <string name="add_config_hysteria2" translatable="false">Hysteria2</string>
    <string name="add_config_olcrtc" translatable="false">olcRTC</string>
    <string name="add_config_openflux" translatable="false">OpenFlux</string>
    <string name="menu_item_save_config">Save config</string>
    <string name="menu_item_edit_config">Edit config</string>
    <string name="menu_item_del_config">Delete config</string>
    <string name="action_delete">Delete</string>
    <string name="action_close">Close</string>
    <string name="menu_item_share">Share</string>
    <string name="menu_item_edit">Edit</string>
    <string name="menu_item_delete">Delete</string>
    <string name="menu_item_import_config_qrcode">Import from QRcode</string>
    <string
        name="menu_item_import_config_clipboard"
    >Import from Clipboard</string>
    <string name="menu_item_import_config_local">Import from locally</string>
    <string
        name="menu_item_import_config_policy_group"
    >Add [Policy group]</string>
    <string
        name="menu_item_import_config_proxy_chain"
    >Add [Proxy chain]</string>
    <string name="menu_item_import_config_manually_vmess">Add [VMess]</string>
    <string name="menu_item_import_config_manually_vless">Add [VLESS]</string>
    <string
        name="menu_item_import_config_manually_ss"
    >Add [Shadowsocks]</string>
    <string name="menu_item_import_config_manually_socks">Add [SOCKS]</string>
    <string name="menu_item_import_config_manually_http">Add [HTTP]</string>
    <string name="menu_item_import_config_manually_trojan">Add [Trojan]</string>
    <string
        name="menu_item_import_config_manually_wireguard"
    >Add [Wireguard]</string>
    <string
        name="menu_item_import_config_manually_hysteria2"
    >Add [Hysteria2]</string>
    <string name="menu_item_import_config_manually_olcrtc">Add [olcRTC]</string>
    <string name="menu_item_import_config_manually_openflux">Add [OpenFlux]</string>
    <string name="del_config_comfirm">Confirm delete ?</string>
    <string
        name="del_invalid_config_comfirm"
    >Please test before deleting! Confirm delete ?</string>
    <string name="server_lab_remarks">remarks</string>
    <string name="server_section_general">Server</string>
    <string name="server_section_wireguard">WireGuard</string>
    <string name="server_section_hysteria2">Bandwidth &amp; Port Hopping</string>
    <string name="server_section_olcrtc">Session</string>
    <string name="server_section_openflux">OpenFlux</string>
    <string name="server_section_security">Security</string>
    <string name="server_section_reality">REALITY</string>
    <string name="server_section_tls_advanced">Advanced TLS</string>
    <string name="server_option_none">(none)</string>
    <string name="server_title_new_server">New server</string>
    <string name="server_hint_untitled">No address yet</string>
    <string name="server_help_title">About this protocol</string>
    <string name="server_help_open_docs">Open documentation</string>
    <string name="server_help_desc_vmess">VMess is the encrypted proxy protocol of Project V2Ray, with rich transport options.</string>
    <string name="server_help_desc_vless">VLESS is a lightweight proxy protocol from XTLS with flow control and REALITY/TLS support.</string>
    <string name="server_help_desc_trojan">Trojan is designed to be indistinguishable from ordinary HTTPS traffic.</string>
    <string name="server_help_desc_shadowsocks">Shadowsocks is a fast, lightweight encrypted proxy.</string>
    <string name="server_help_desc_socks">Plain SOCKS5 proxy without extra encryption. Best for trusted local networks.</string>
    <string name="server_help_desc_http">Plain HTTP proxy without extra encryption. Best for trusted local networks.</string>
    <string name="server_help_desc_wireguard">WireGuard is a fast, modern VPN tunnel with strong cryptography.</string>
    <string name="server_help_desc_hysteria2">Hysteria2 is a high-performance QUIC-based proxy tuned for lossy networks.</string>
    <string name="server_help_desc_olcrtc">olcRTC is an encrypted TCP-over-WebRTC tunnel disguised as an ordinary video call.</string>
    <string name="server_help_desc_openflux">OpenFlux is a TCP tunnel with pluggable transports (Yandex Docs, MAX, Cups.online). The client runs a local SOCKS5 proxy; you must run an OpenFlux exit node on a VPS.</string>
    <string name="server_lab_address">address</string>
    <string name="server_lab_port">port</string>
    <string name="server_lab_id">id</string>
    <string name="server_lab_alterid">alterId</string>
    <string name="server_lab_security">security</string>
    <string name="server_lab_network">Network</string>
    <string name="server_lab_more_function">Transport</string>
    <string name="server_lab_head_type">head type</string>
    <string name="server_lab_mode_type">gRPC mode</string>
    <string name="server_lab_request_host">host</string>
    <string name="server_lab_request_host_http">http host</string>
    <string name="server_lab_request_host_ws">ws host</string>
    <string name="server_lab_request_host_httpupgrade">httpupgrade host</string>
    <string name="server_lab_request_host_xhttp">xhttp host</string>
    <string name="server_lab_request_host_h2">h2 host</string>
    <string name="server_lab_request_host_quic">QUIC security</string>
    <string name="server_lab_request_host_grpc">gRPC Authority</string>
    <string name="server_lab_path">path</string>
    <string name="server_lab_path_ws">ws path</string>
    <string name="server_lab_path_httpupgrade">httpupgrade path</string>
    <string name="server_lab_path_xhttp">xhttp path</string>
    <string name="server_lab_path_h2">h2 path</string>
    <string name="server_lab_path_quic">QUIC key</string>
    <string name="server_lab_path_kcp">kcp seed</string>
    <string name="server_lab_path_grpc">gRPC serviceName</string>
    <string name="server_lab_stream_security">TLS</string>
    <string name="server_lab_stream_fingerprint">Fingerprint</string>
    <string name="server_lab_stream_alpn">Alpn</string>
    <string name="server_lab_allow_insecure">allowInsecure</string>
    <string name="server_lab_sni">SNI</string>
    <string name="server_lab_address3">address</string>
    <string name="server_lab_port3">port</string>
    <string name="server_lab_id3">password</string>
    <string name="server_lab_security3">security</string>
    <string name="server_lab_id4">Password(Optional)</string>
    <string name="server_lab_security4">User(Optional)</string>
    <string name="server_lab_encryption">encryption</string>
    <string name="server_lab_flow">flow</string>
    <string name="server_lab_public_key">PublicKey</string>
    <string name="server_lab_preshared_key">PreSharedKey(optional)</string>
    <string name="server_lab_short_id">ShortId</string>
    <string name="server_lab_spider_x">SpiderX</string>
    <string name="server_lab_mldsa65_verify">Mldsa65Verify</string>
    <string name="server_lab_secret_key">SecretKey</string>
    <string
        name="server_lab_reserved"
    >Reserved(Optional, separated by commas)</string>
    <string
        name="server_lab_local_address"
    >Local address (optional IPv4/IPv6, separated by commas)</string>
    <string name="olcrtc_lab_carrier">Carrier (auth provider)</string>
    <string name="olcrtc_lab_transport">Transport</string>
    <string name="olcrtc_lab_room_id">Room ID</string>
    <string
        name="olcrtc_lab_server_url"
    >Server URL (host[:port] for jitsi/telemost)</string>
    <string name="olcrtc_hint_server_url">meet.egovm.ru</string>
    <string name="olcrtc_lab_client_id">Client ID (device identifier)</string>
    <string name="olcrtc_hint_client_id">Auto-generated UUID if empty</string>
    <string name="olcrtc_lab_key_hex">Encryption key (64 hex chars)</string>
    <string
        name="olcrtc_lab_engine"
    >Transport parameters (key=value&amp;...)</string>
    <string name="menu_item_search">Show/hide search</string>
    <string name="switch_bypass_apps_mode">Bypass Mode</string>
    <string name="per_app_proxy_settings_enable">Enable per-app</string>
    <string name="title_settings">Settings</string>
    <string name="title_logcat">Logcat</string>
    <string name="title_sub_setting">Subscriptions</string>
    <string name="routing_settings_title">Routing Settings</string>
    <string name="title_policy_group_type">Policy group type</string>
    <string
        name="title_policy_group_subscription_id"
    >From subscription group</string>
    <string
        name="title_policy_group_subscription_filter"
    >Remarks regular filter</string>
</resources>